k8s/04-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: k8s-demo
spec:
  replicas: 1
  strategy:
    type: Recreate   # con 1 réplica y volumen RWO, evita 2 pods peleando por el PVC
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres   # evita el problema de lost+found en el volumen raíz
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "tasksuser", "-d", "tasksdb"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "tasksuser", "-d", "tasksdb"]
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
