k8s/09-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-web
  namespace: k8s-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-web
  template:
    metadata:
      labels:
        app: tasks-web
    spec:
      containers:
        - name: tasks-web
          image: ghcr.io/cristianespinosa9/tasks-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "150m"
              memory: "96Mi"
