k8s/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: k8s-demo
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  # Sin "type": por defecto ClusterIP -> solo accesible dentro del clúster.
  # La BD nunca se expone a internet directamente.
