k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-api
  namespace: k8s-demo
  labels:
    app: tasks-api
spec:
  selector:
    app: tasks-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
