k8s/10-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-web
  namespace: k8s-demo
spec:
  selector:
    app: tasks-web
  ports:
    - port: 80
      targetPort: 80
