k8s/12-istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: tasks-gateway
  namespace: k8s-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
