k8s/13-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tasks-vs
  namespace: k8s-demo
spec:
  hosts:
    - "tasks.local"
  gateways:
    - tasks-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: /
      route:
        - destination:
            host: tasks-api
            port:
              number: 80
    - route:
        - destination:
            host: tasks-web
            port:
              number: 80
